Beefed up comments